--- a/project-management-server/package.json
+++ b/project-management-server/package.json
@@ -16,6 +16,7 @@
     "hbs": "^4.1.2",
     "mongoose": "^6.0.8",
     "morgan": "^1.10.0",
+    "react-toastify": "^8.0.3",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
