--- a/project-management-server/package.json
+++ b/project-management-server/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.1.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -16,6 +17,7 @@
     "hbs": "^4.1.2",
     "mongoose": "^6.0.8",
     "morgan": "^1.10.0",
+    "react-bootstrap": "^2.0.0-rc.0",
     "react-toastify": "^8.0.3",
     "serve-favicon": "^2.5.0"
   },
