--- a/project-management-server/package.json
+++ b/project-management-server/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^6.0.8",
     "morgan": "^1.10.0",
     "react-bootstrap": "^2.0.0-rc.0",
+    "react-datetime": "^3.1.1",
     "react-toastify": "^8.0.3",
     "serve-favicon": "^2.5.0"
   },
